# lanmai

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
etc/: lanmai.json  lanmai.service
lib/: args.h  common.cpp  common.h  config.h  err.h  log.h  mapper.h
src/: args.cpp  common.cpp  config.cpp  lanmai.cpp  mapper.cpp  xbox.cpp
